--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             </ul>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <figure>
+            <img src="https://i.pinimg.com/originals/1e/15/8c/1e158cadbc4e98e60d95fdff49b1ad25.gif" />
+            <figurecaption>Sabendo pull request</figurecaption>
+        </figure>
+    </footer>
 </body>
 </html>
