adding list item and img

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
             <ul>
                 <li>Pam</li>
                 <li>Izabel</li>
+                <li>Igor</li>
             </ul>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <img class="stars-footer" src="https://images.twinkl.co.uk/tr/image/upload/t_illustration/illustation/stars-and-moon.png">
+    </footer>
 </body>
 </html>
