adding content to html

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <header>
         <h2> Treinando git pull </h2>
         <img class="img-galaxy" src="https://s2.glbimg.com/FaD_oY0BUTmNV-zk6FBNI6lIEjQ=/e.glbimg.com/og/ed/f/original/2019/10/03/pia15416_medium.jpg" alt="galáxia andrômeda">
+        <p>A galáxia de Andrômeda (Messier 31, NGC 224) é uma galáxia espiral localizada a cerca de 2,54 milhões de anos-luz de distância da Terra, na direção da constelação de Andrômeda. É a galáxia espiral mais próxima da Via Láctea e seu nome é derivado da constelação onde está situada, que, por sua vez, tem seu nome derivado da princesa mitológica Andrômeda.</p>
     </header>
     <main>
         <div class="box-list">
             <ul>
                 <li>Pam</li>
                 <li>Izabel</li>
+                <li>Gabriel</li>
             </ul>
         </div>
     </main>
