--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <ul>
                 <li>Pam</li>
                 <li>Izabel</li>
+                <li>Brendon </li>
             </ul>
         </div>
     </main>
